sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:10: error: reassignment to val
    min=min+1;
       ^